--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^14.2.0",
     "@types/body-parser": "^1.19.2",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "ng": "^0.0.0",
     "rxjs": "~7.5.0",
     "zone.js": "~0.11.4"
