--- a/back-end/conecte-se/src/main/resources/application.properties
+++ b/back-end/conecte-se/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/conecte_se
 
-# spring.datasource.username=conecte_se
-# spring.datasource.password=A1b9c2d8e3@
+spring.datasource.username=conecte_se
+spring.datasource.password=A1b9c2d8e3@
 
-spring.datasource.username=root
-spring.datasource.password=root
+# spring.datasource.username=root
+# spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
 
