--- a/back-end/conecte-se/src/main/resources/application.properties
+++ b/back-end/conecte-se/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.password=A1b9c2d8e3@
 
 spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
