--- a/back-end/conecte-se/src/main/resources/application.properties
+++ b/back-end/conecte-se/src/main/resources/application.properties
@@ -3,9 +3,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/conecte_se
 spring.datasource.username=conecte_se
 spring.datasource.password=A1b9c2d8e3@
 
-# spring.datasource.username=root
-# spring.datasource.password=root
+#spring.datasource.username=root
+#spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
